# nexus-cli

clients/cli/: Cargo.toml
