[package]
name = "nexus-network"
version = "0.10.14"
edition = "2024"
rust-version = "1.85"
build = "build.rs"

[features]
build_proto = []

[[bin]]
name = "nexus-network"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3              # Maximum LLVM optimizations
lto = "fat"                # Full link-time optimization across crates
codegen-units = 1          # One unit for best cross-function inlining
panic = "abort"            # Smaller + faster error handling
strip = "symbols"          # Strip but keep enough for perf tools
debug = false              # No debug info
incremental = false        # Disable incremental compilation
overflow-checks = false    # Remove integer overflow checks (safe unless you depend on panic)

[build]
rustflags = [
  "-C", "target-cpu=native",         # Use all features of the host CPU
  "-C", "target-feature=+aes,+sse2,+avx,+avx2,+fma,+bmi2", # Explicit SIMD + crypto accel
  "-C", "inline-threshold=275",      # Encourage more inlining of hot paths
  "-C", "prefer-vector-width=256",   # Hint LLVM to use AVX2 vector width
  "-C", "link-arg=-Wl,-O1",          # Optimize linker stage
  "-C", "link-arg=-Wl,--as-needed"   # Remove unused deps at link time
]


[profile.ci-build]
inherits = "dev"
opt-level = 0              # No optimization for fastest compilation.
debug = 0                  # No debug info for faster builds.
debug-assertions = false   # Disable debug assertions to remove `debug!` macro prints.
strip = "none"             # No stripping to save time.
lto = false                # No LTO for faster compilation.
codegen-units = 256        # Maximum parallel codegen units for faster compilation.
incremental = true         # Enable incremental compilation for faster rebuilds.
panic = "unwind"           # Use unwind for panics to allow tests to catch them.

[dependencies]
async-trait = "0.1.88"
cfg-if = "1.0"
chrono = "0.4.38"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29.0"
ed25519-dalek = { version = "2", features = ["rand_core"] }
home = "0.5.9"
iana-time-zone = "0.1.60"
log = "0.4.26"
nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm", tag = "0.3.4" }
postcard = "1.0.10"
prost = "0.13"
prost-types = "0.13.5"
rand = "0.8"
rand_core = "0.6"
ratatui = "0.29.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
sha3 = "0.10.8"
strum = "0.26.3"
sysinfo = "0.36"
thiserror = "2.0.12"
tokio = { version = "1.38", features = ["full"] }
urlencoding = "2.1.3"
uuid = "1.16.0"
semver = "1.0"

[dev-dependencies]
assert_cmd = "2"
async-trait = "0.1.88"
mockall = "0.12"
predicates = "3"
tempfile = "3.20.0"

[build-dependencies]
prost-build = "0.13"
